# reddit_crypto

./: .gitignore  Experimental Approach Recommendations.md  README.md  main.py  pyproject.toml  structure.md
data/processed/: cleaned_btc_market_data_1h.parquet  cleaned_eth_market_data_1h.parquet  cleaned_reddit_data.parquet  master_data.parquet  sentiment_data.parquet
data/raw/: btc_usd_market_data.parquet  btc_usd_market_data_1h.parquet  eth_usd_market_data.parquet  eth_usd_market_data_1h.parquet  raw_reddit_data.parquet  raw_reddit_data_aggressive-praw_limit5000.parquet
notebooks/: 01_acquisition_clean_investigate.ipynb  02_correlation_analysis.ipynb  03_final_analysis.ipynb  playground.ipynb
results/: coefficients_btc.csv  coefficients_eth.csv  correlation_results.csv  prediction_results_btc.csv  prediction_results_eth.csv
src/: config.py
src/acquisition/: fetch_market.py  fetch_reddit.py
src/analysis/: correlation_analysis.py  predictive_modeling.py
src/preprocessing/: clean_market_data.py  unify_data.py
src/processing/: clean_reddit_data.py  process_sentiment.py  unify_data.py
